[package]
name = "cargo-fork"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.63"
async-compression = { version = "0.3.14", features = ["tokio", "all-algorithms"] }
cargo-edit = "0.10.4"
cargo-lock = "8.0.2"
clap = { version = "3.2.20", features = ["derive"] }
crates_io_api = "0.8.0"
futures-util = "0.3.24"
# pending cargo-edit update
git2 = "0.14.0"
json = "0.12.4"
reqwest = {version = "0.11.11", features = ["stream"]}
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
tokio = {version = "1.21.0", features = ["full"]}
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.3", features = ["io"] }
toml_edit = "0.14.4"

["patch.crates-io"]
anyhow = { path = "/home/adam/project/cargo-fork/fork-anyhow" }
toml_edit = { path = "/home/adam/project/cargo-fork/fork-toml_edit" }
