[package]
name = "cargo-fork"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.63"
async-compression = { version = "0.3.14", features = ["tokio", "all-algorithms"] }
cargo-edit = "0.11.8"
cargo_metadata = "0.15.0"
clap = { version = "4.1.4", features = ["derive", "cargo", "wrap_help"] }
crates_io_api = "0.8.0"
futures-util = "0.3.24"
git2 = "0.16.1"
reqwest = {version = "0.11.11", features = ["stream"]}
semver = "1.0.14"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
tokio = {version = "1.21.0", features = ["full"]}
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.3", features = ["io"] }
toml_edit = "0.19"
